--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,8 +1,15 @@
-allow_embedding: false
-package_name: M3_App_2
-name: M3 App 2
-startup_form: Form1
-renamed: true
-runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null}
 dependencies: []
-services: []
+services:
+- source: /runtime/services/tables.yml
+  client_config: {}
+  server_config: {}
+startup: {type: form, module: testing}
+package_name: ClientPDF
+allow_embedding: false
+name: ClientPDF
+runtime_options: {version: 2, client_version: '3', server_version: python3-full, server_spec: null}
+metadata: {title: Client Side PDF, description: 'An Anvil wrapper to create performant
+    PDF Files on the Client Side '}
+startup_form: null
+native_deps: {head_html: '<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>'}
+renamed: true
