--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -3,6 +3,7 @@ unique_ids:
     testing: K7KYGTN4TZZMCZKWSRANBG4LKWGRG4M6
   modules:
     PDF: '1672671457246849469975387.5017'
+    _readme: '1672676573660429199526854.7468'
   server_modules: {}
   assets:
     standard-page.html: UB44DRJDLSYQ3KGIPERLNU7NQ3AEDEAQ
