Created s_tests, components.preview, components and tests.compare; Edited fast_pdf; Deleted preview and test

--- a/.anvil_editor.yaml
+++ b/.anvil_editor.yaml
@@ -1,9 +1,11 @@
 unique_ids:
   forms:
-    preview: '1672940976530761062475550.9812'
+    components.preview: '1672940976530761062475550.9812'
     testing: K7KYGTN4TZZMCZKWSRANBG4LKWGRG4M6
+    tests.compare: '1672951790310454296144770.9959'
   modules:
     _readme: '1672676573660429199526854.7468'
+    components: '1672951803674714699172014.2994'
     fast_pdf: '1672671457246849469975387.5017'
     fast_pdf.fpdf: '1672693610853656216370684.6145'
     fast_pdf.jspdf: '1672693080936744036430333.6293'
@@ -11,7 +13,7 @@ unique_ids:
     tests: '1672688345844176853693213.87823'
     tests.basic_pdf_test: '167268949937513444452694.804321'
   server_modules:
-    test: '1672688337394138533263477.6304'
+    s_tests: '1672951491939105529759206.64442'
   assets:
     standard-page.html: UB44DRJDLSYQ3KGIPERLNU7NQ3AEDEAQ
     theme.css: K6MR757PJ3BWZ3EPCLMJOM7PDMJXBJNV
