Edited settings, s_tests, fast_pdf, fast_pdf.utils, components.preview, tests.compare and tests.basic_pdf_test; Deleted testing and fast_pdf.fpdf

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -3,7 +3,7 @@ services:
 - source: /runtime/services/tables.yml
   client_config: {}
   server_config: {}
-startup: {type: form, module: testing}
+startup: {type: form, module: tests.compare}
 package_name: FastPDF
 allow_embedding: false
 name: FastPDF
