--- a/client_code/tests/compare/form_template.yaml
+++ b/client_code/tests/compare/form_template.yaml
@@ -1,3 +1,34 @@
-container: {type: ColumnPanel}
-components: []
+container:
+  type: ColumnPanel
+  properties: {col_widths: '{}'}
+components:
+- type: ColumnPanel
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    spacing_below: small, background: ''}
+  name: column_panel_1
+  layout_properties: {grid_position: 'RQWIMW,WABCJE', full_width_row: true}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: CLIENT, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_1
+    layout_properties: {grid_position: 'ISGGYO,TWZIRX NUOGVV,PULEZD'}
+  - type: form:components.preview
+    properties: {url: ''}
+    name: client_preview
+    layout_properties: {grid_position: 'ISGGYO,TWZIRX LQEORA,UMAHYC', full_width_row: true}
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: SERVER, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_2
+    layout_properties: {grid_position: 'ISGGYO,WKNLWC VADLMG,PYLVAC'}
+  - type: form:components.preview
+    properties: {}
+    name: server_preview
+    layout_properties: {grid_position: 'ISGGYO,WKNLWC UAUMEO,PZDKED', full_width_row: true}
 is_package: true
