--- a/client_code/tests/compare/form_template.yaml
+++ b/client_code/tests/compare/form_template.yaml
@@ -1,34 +1,92 @@
 container:
   type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {col_widths: '{"BJVKWM":15,"WABCJE":60,"IFQFQW":5}'}
 components:
+- type: Label
+  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
+    text: PDF Tester, font_size: null, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: false, background: '', bold: false, underline: false,
+    icon: ''}
+  name: label_3
+  layout_properties: {grid_position: 'RQWIMW,BJVKWM DEITLQ,EJXPJF'}
+- type: DropDown
+  properties: {}
+  name: pdf_dd
+  layout_properties: {grid_position: 'RQWIMW,BJVKWM LBNIGQ,ZQESEP'}
+- type: Button
+  properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
+    foreground: '', visible: true, text: Compare, font_size: null, font: '', spacing_above: small,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    underline: false, icon: ''}
+  name: compare_btn
+  layout_properties: {grid_position: 'RQWIMW,BJVKWM PAGPEW,KLPBFT'}
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+    wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"VVJBGW":30,"CZYGOL":3,"WKNLWC":27}',
     spacing_below: small, background: ''}
   name: column_panel_1
   layout_properties: {grid_position: 'RQWIMW,WABCJE', full_width_row: true}
   components:
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: CLIENT, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_1
-    layout_properties: {grid_position: 'ISGGYO,TWZIRX NUOGVV,PULEZD'}
-  - type: form:components.preview
-    properties: {url: ''}
-    name: client_preview
-    layout_properties: {grid_position: 'ISGGYO,TWZIRX LQEORA,UMAHYC', full_width_row: true}
-  - type: Label
-    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: SERVER, font_size: null, font: '', spacing_above: small,
-      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-      underline: false, icon: ''}
-    name: label_2
-    layout_properties: {grid_position: 'ISGGYO,WKNLWC VADLMG,PYLVAC'}
-  - type: form:components.preview
-    properties: {}
-    name: server_preview
-    layout_properties: {grid_position: 'ISGGYO,WKNLWC UAUMEO,PZDKED', full_width_row: true}
+  - type: ColumnPanel
+    properties: {col_widths: '{"PFWLLT":31,"GMFJSL":15,"PDHCOB":14}'}
+    name: column_panel_3
+    layout_properties: {grid_position: 'ISGGYO,VVJBGW', full_width_row: true}
+    components:
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: CLIENT, font_size: 16, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+        underline: false, icon: ''}
+      name: label_1
+      layout_properties: {grid_position: 'IMDYTD,PFWLLT', full_width_row: true}
+    - type: Button
+      properties: {role: outlined-button, align: center, tooltip: '', border: '',
+        enabled: true, foreground: '', visible: true, text: '', font_size: null, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: 'fa:download'}
+      name: client_download_btn
+      layout_properties:
+        col_widths: {}
+        grid_position: IMDYTD,GMFJSL
+        full_width_row: true
+    - type: Button
+      properties: {role: outlined-button, align: center, tooltip: '', border: '',
+        enabled: true, foreground: '', visible: true, text: '', font_size: null, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: 'fa:print'}
+      name: client_print_btn
+      layout_properties:
+        col_widths: {}
+        grid_position: IMDYTD,PDHCOB
+        full_width_row: true
+    - type: form:components.preview
+      properties: {url: ''}
+      name: client_preview
+      layout_properties: {grid_position: 'CIDSFT,FUAPQV', full_width_row: true}
+  - type: Spacer
+    properties: {height: 32}
+    name: spacer_1
+    layout_properties: {grid_position: 'ISGGYO,CZYGOL', full_width_row: true}
+  - type: ColumnPanel
+    properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: column_panel_2
+    layout_properties: {grid_position: 'ISGGYO,WKNLWC', full_width_row: true}
+    components:
+    - type: Label
+      properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+        visible: true, text: SERVER, font_size: 16, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
+        underline: false, icon: ''}
+      name: label_2
+      layout_properties: {grid_position: 'NWZKPZ,BVHRHL', full_width_row: false}
+    - type: form:components.preview
+      properties: {}
+      name: server_preview
+      layout_properties: {grid_position: 'VQJSXG,RIGMLL', full_width_row: false}
+- type: Spacer
+  properties: {height: 32}
+  name: spacer_3
+  layout_properties: {grid_position: 'RQWIMW,IFQFQW', full_width_row: true}
 is_package: true
