--- a/client_code/tests/compare/form_template.yaml
+++ b/client_code/tests/compare/form_template.yaml
@@ -8,11 +8,11 @@ components:
     spacing_below: small, italic: false, background: '', bold: false, underline: false,
     icon: ''}
   name: label_3
-  layout_properties: {grid_position: 'RQWIMW,BJVKWM DEITLQ,EJXPJF'}
+  layout_properties: {grid_position: 'RQWIMW,BJVKWM DEITLQ,EJXPJF', full_width_row: true}
 - type: DropDown
   properties: {}
   name: pdf_dd
-  layout_properties: {grid_position: 'RQWIMW,BJVKWM LBNIGQ,ZQESEP'}
+  layout_properties: {grid_position: 'RQWIMW,BJVKWM LBNIGQ,ZQESEP', full_width_row: true}
   event_bindings: {change: pdf_dd_change}
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
@@ -94,9 +94,9 @@ components:
       layout_properties: {grid_position: 'NWZKPZ,TBFRMB', full_width_row: false}
       event_bindings: {click: server_print_btn_click}
     - type: form:components.preview
-      properties: {}
+      properties: {url: ''}
       name: server_preview
-      layout_properties: {grid_position: 'VQJSXG,RIGMLL', full_width_row: false}
+      layout_properties: {grid_position: 'VQJSXG,RIGMLL', full_width_row: true}
 - type: Spacer
   properties: {height: 32}
   name: spacer_3
