--- a/client_code/tests/compare/form_template.yaml
+++ b/client_code/tests/compare/form_template.yaml
@@ -1,19 +1,24 @@
 container:
   type: ColumnPanel
-  properties: {col_widths: '{"BJVKWM":9,"IOVSAH":26,"STMDKL":25}'}
+  properties: {col_widths: '{"IOVSAH":26,"STMDKL":25}'}
 components:
-- type: Label
-  properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: Select PDF, font_size: null, font: '', spacing_above: small, icon_align: left,
-    spacing_below: small, italic: false, background: '', bold: false, underline: false,
-    icon: ''}
-  name: label_3
-  layout_properties: {grid_position: 'RQWIMW,BJVKWM DEITLQ,EJXPJF', full_width_row: true}
-- type: DropDown
+- type: FlowPanel
   properties: {}
-  name: pdf_dd
-  layout_properties: {grid_position: 'RQWIMW,BJVKWM LBNIGQ,ZQESEP', full_width_row: true}
-  event_bindings: {change: pdf_dd_change}
+  name: flow_panel_1
+  layout_properties: {grid_position: 'XPVEUF,SZBAWZ'}
+  components:
+  - type: Label
+    properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
+      visible: true, text: Select PDF, font_size: null, font: '', spacing_above: small,
+      icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+      underline: false, icon: ''}
+    name: label_3
+    layout_properties: {grid_position: 'RQWIMW,BJVKWM DEITLQ,EJXPJF', full_width_row: true}
+  - type: DropDown
+    properties: {}
+    name: pdf_dd
+    layout_properties: {grid_position: 'RQWIMW,BJVKWM', full_width_row: true}
+    event_bindings: {change: pdf_dd_change}
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"BVHRHL":29,"RMKFYB":16,"TBFRMB":15}',
