--- a/client_code/tests/compare/form_template.yaml
+++ b/client_code/tests/compare/form_template.yaml
@@ -3,7 +3,8 @@ container:
   properties: {col_widths: '{"IOVSAH":26,"STMDKL":25}'}
 components:
 - type: FlowPanel
-  properties: {}
+  properties: {role: null, spacing: medium, align: left, tooltip: '', border: '',
+    foreground: '', visible: true, spacing_above: small, spacing_below: none, background: ''}
   name: flow_panel_1
   layout_properties: {grid_position: 'XPVEUF,SZBAWZ'}
   components:
@@ -28,7 +29,7 @@ components:
   components:
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: SERVER, font_size: 16, font: '', spacing_above: small,
+      visible: true, text: SERVER Rendered, font_size: 16, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
       underline: false, icon: ''}
     name: label_2
@@ -71,7 +72,7 @@ components:
   components:
   - type: Label
     properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-      visible: true, text: CLIENT, font_size: 16, font: '', spacing_above: small,
+      visible: true, text: CLIENT Rendered, font_size: 16, font: '', spacing_above: small,
       icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
       underline: false, icon: ''}
     name: label_1
