--- a/anvil.yaml
+++ b/anvil.yaml
@@ -3,6 +3,9 @@ services:
 - source: /runtime/services/tables.yml
   client_config: {}
   server_config: {}
+- source: /runtime/services/anvil/files.yml
+  client_config: {}
+  server_config: {file_table: files}
 startup: {type: form, module: tests.compare}
 package_name: FastPDF
 allow_embedding: false
@@ -21,4 +24,19 @@ native_deps: {head_html: '<script src="https://cdnjs.cloudflare.com/ajax/libs/js
     <script src="https://printjs-4de6.kxcdn.com/print.min.js"></script>
 
     '}
+db_schema:
+  files:
+    client: none
+    server: full
+    columns:
+    - name: path
+      type: string
+      admin_ui: {order: 0, width: 200}
+    - name: file
+      type: media
+      admin_ui: {order: 1, width: 200}
+    - name: file_version
+      type: string
+      admin_ui: {order: 2, width: 200}
+    title: Files
 renamed: true
