Edited fast_pdf.jspdf, settings and fast_pdf

--- a/anvil.yaml
+++ b/anvil.yaml
@@ -3,7 +3,7 @@ services:
 - source: /runtime/services/tables.yml
   client_config: {}
   server_config: {}
-startup: {type: form, module: tests.compare}
+startup: {type: module, module: _readme}
 package_name: fast_pdf
 allow_embedding: false
 name: FastPDF
